# click-datetime

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml
click_datetime/: __init__.py
examples/: datetime_with_custom_format.py  foobar.py
