[tool.poetry]
name = "click-datetime"
version = "0.3.0"
description = "Datetime type support for click."
authors = ["Dawson R <105720-ddaws@users.noreply.gitlab.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
click = "^6.6"
wheel = "^0.44.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
